# network-dialer

./: .gitignore  README.md  gen-icon.mjs  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: build.yml  test-signing.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.manifest.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: auto_connect.rs  commands.rs  lib.rs  main.rs  network.rs
src-tauri/src/ras/: dial.rs  entries.rs  error.rs  mod.rs  status.rs  types.rs
src/components/: ConnectionControl.tsx  LogViewer.tsx  SettingsPanel.tsx  StatusCard.tsx  UpdateChecker.tsx
src/hooks/: useConnection.ts  useSettings.ts
src/styles/: global.css
src/types/: index.ts
