[package]
name = "network-line"
version = "1.2.0"
description = "Windows网络拨号连接管理器"
authors = ["you"]
edition = "2021"

[lib]
name = "network_line_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_Rras",
    "Win32_Networking_WinSock",
    "Win32_Security_Credentials",
]
